# flowy

./: .clang-format  .clang-tidy  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  environment.yml  meson.build  meson_options.txt  run_example_kilauea.sh  run_formatter.sh  run_linter.sh  towncrier.toml
.github/workflows/: ci.yml  ci_windows.yml  pre_commit.yml
examples/: plot_thickness_from_asc_file.py  sanitize_file.py
examples/ETNA_LFS1/: README.md  input.toml
examples/KILAUEA2014-2015/: input.toml
examples/constant_slope/: input.toml
examples/saddle/: input.toml
flowy/include/: asc_file.hpp  config.hpp  config_parser.hpp  definitions.hpp  dump_csv.hpp  lobe.hpp  math.hpp  netcdf_file.hpp  simulation.hpp  topography.hpp  topography_file.hpp  vent_flags.hpp
flowy/include/models/: mr_lava_loba.hpp
include/: asc_file.hpp  config.hpp  config_parser.hpp  definitions.hpp  dump_csv.hpp  flowtastic.hpp  lobe.hpp  math.hpp  simulation.hpp  topography.hpp
src/: asc_file.cpp  config_parser.cpp  flowtastic.cpp  main.cpp  netcdf_file.cpp  simulation.cpp  topography.cpp
subprojects/: pdf_cpplib.wrap
test/: test_asc.cpp  test_bounding_box.cpp  test_dummy.cpp  test_file_io.cpp  test_lobe.cpp  test_netcdf.cpp  test_perturb_angle.cpp  test_rasterization.cpp  test_simulation.cpp  test_slope.cpp  test_topography.cpp  test_truncated_normal.cpp
test/file_io/: height.nc
test/res/asc/: before_crop_to_content.asc  file.asc  file_crop.asc
